--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -296,7 +296,7 @@
 </style>
 
 <!-- Toolbar -->
-<div class="toolbar" role="banner">
+<div class="toolbar" style="display: none;" role="banner">
   <img
     width="40"
     alt="Angular Logo"
@@ -326,7 +326,7 @@
   </a>
 </div>
 
-<div class="content" role="main">
+<div class="content" role="main" style="display: none;">
 
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
