--- a/src/app/employee-detail/employee-detail.component.html
+++ b/src/app/employee-detail/employee-detail.component.html
@@ -1,4 +1,6 @@
+
 <h2>Employee Detail</h2>
+{{errMsg}}
 <ul *ngFor="let employee of employees">
     <li>
         {{employee.id}} - {{employee.name}} - {{employee.age}}
