add router activated router and param

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -596,12 +596,21 @@
 
 <nav>
 
-  <button class="btn btn-primary" routerLink="/employeeList" routerLinkActive="active">Employee</button>
+  <!-- <button class="btn btn-primary" routerLink="/employeeList" routerLinkActive="active">Employee</button>
   <button class="btn btn-primary" routerLink="/department">Department</button>
   <button class="btn btn-primary" routerLink="/interpolation">interpolation</button>
   <button class="btn btn-primary" routerLink="/propertyBinding">propertyBinding</button>
   <button class="btn btn-primary" routerLink="/directive">directive</button>
-  <button class="btn btn-primary" routerLink="/parent">parent</button>
+  <button class="btn btn-primary" routerLink="/parent">parent</button> -->
+
+  <div class="row">
+    <div class="col-1 boxStyle" routerLink="/employeeList" routerLinkActive="active">Employee</div>
+    <div class="col-1 boxStyle" routerLink="/department">Department</div>
+    <div class="col-1 boxStyle" routerLink="/interpolation">interpolation</div>
+    <div class="col-1 boxStyle" routerLink="/propertyBinding">propertyBinding</div>
+    <div class="col-1 boxStyle" routerLink="/directive">directive</div>
+    <div class="col-1 boxStyle" routerLink="/parent">parent</div>
+  </div>
 
 </nav>
 
