--- a/src/app/department/department.component.html
+++ b/src/app/department/department.component.html
@@ -1,1 +1,15 @@
-<p>department works!</p>
+<h3>
+    Department List
+</h3>
+
+<div class="row">
+    <div class="col-2">
+        <ul>
+            <li class="boxStyle" (click)="onSelect(department)" *ngFor="let department of departmentList">
+                <span>{{department.id}}: </span>{{department.name}}
+            </li>
+        </ul>
+    </div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+</div>
