--- a/src/app/department-list/department-list.component.html
+++ b/src/app/department-list/department-list.component.html
@@ -1,4 +1,10 @@
 <h5>you selected department with id = {{departmentId }}</h5>
 
-<a (click)="goPrevious()">Previous</a>
-<a (click)="goNext()">Next</a>
+<p>
+    <button (click)="showOverview()">Overview</button>
+    <button (click)="showContact()">Contact</button>
+</p>
+
+<router-outlet></router-outlet>
+<button (click)="goPrevious()">Previous</button>
+<button (click)="goNext()">Next</button>
