--- a/src/app/directive/directive.component.html
+++ b/src/app/directive/directive.component.html
@@ -18,3 +18,6 @@
     <p>{{e}} showing even number</p>
 
 </div>
+
+<p>This paragraph is a normal one </p>
+<p appRegblack>This paragraph is a custom directive one </p>
