add reactive form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -609,6 +609,7 @@
     <div class="col-1 boxStyle" routerLink="/propertyBinding">propertyBinding</div>
     <div class="col-1 boxStyle" routerLink="/directive">directive</div>
     <div class="col-1 boxStyle" routerLink="/parent">parent</div>
+    <div class="col-1 boxStyle" routerLink="/reactiveForm">Reactive Form</div>
   </div>
 
 </nav>
